apps/postgres/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: postgres
    homelab.local/OwnedBy: ElPoshoX
